# zyrun

./: .gitignore  LICENSE  README.md  pyproject.toml  test.py  zycli.toml
.github/workflows/: release.yml  test.yml
tests/: create.py  test_clean.py
zyjared_cli/: clean.py  cli.py
zyjared_cli/cli/: __init__.py  app.py  clean.py  echo.py
zyjared_cli/core/: clean.py
zyjared_cli/helpers/: config.py  log.py
zyjared_cli/utils/: fs.py  timing.py  valid.py
