[tool.poetry]
name = "zyjared-cli"
version = "0.1.4"
description = "zyjared's cli tool"
authors = ["zyjared <zyjared@outlook.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.urls]
homepage = "https://github.com/zyjared/zyjared-cli"
repository = "https://github.com/zyjared/zyjared-cli"
documentation = "https://github.com/zyjared/zyjared-cli#readme"

[tool.poetry.scripts]
zycli = "zyjared_cli.main:app"

[tool.poetry.dependencies]
python = "^3.12"
typer = { extras = ["all"], version = "^0.12.3" }
zyjared-fs = "^0.1.1"
zyjared-color = "^0.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
